Fix button generator relying on global text color
This may output unreadable color combinations for btn background and text color when global text color is a lighter color in case of color schemes defaulting to light-on-dark

--- a/less/buttons.less
+++ b/less/buttons.less
@@ -361,7 +361,7 @@
 	}
 
 	// define text color
-	@text-color: contrast(@@base-color,@base-font-color,#fff,@btn-text-color-contrast-threshold);
+	@text-color: contrast(@@base-color,#000,#fff,@btn-text-color-contrast-threshold);
 
 	.colorset(@@base-color);
 	.generate-btn-styles();
